--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "armory_examples"]
 	path = armory_examples
 	url = https://github.com/tong/armory_examples.git
+[submodule "armory_templates"]
+	path = armory_templates
+	url = https://github.com/tong/armory_templates.git
