--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "armory_examples"]
 	path = armory_examples
 	url = https://github.com/tong/armory_examples.git
+	branch = examples-browser-compat
 [submodule "armory_templates"]
 	path = armory_templates
 	url = https://github.com/tong/armory_templates.git
+	branch = examples-browser-compat
