--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,13 @@ jobs:
       - uses: krdlab/setup-haxe@v1
         with:
           haxe-version: 4.2.3
+      - name: Cache 
+        uses: actions/cache@v2
+        env:
+          armsdk-cache-version: 21.07
+        with:
+          path: ./armsdk
+          key: armsdk-cache-${{ env.armsdk-cache-version }}
       - name: Install blender
         run: sudo snap install blender --classic
       - name: Install armory
@@ -52,7 +59,6 @@ jobs:
           ls web/examples
           ls web/templates
           ls web/tutorials
-          haxelib install app.hxml --always
           haxe app.hxml
       - name: Deploy gh-pages
         uses: JamesIves/github-pages-deploy-action@4.1.4
