--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,6 @@ jobs:
         run: haxe build-tutorials.hxml 
       - name: Build application
         run: |
-          ARMSDK="$(pwd)/armsdk"
-          haxelib install markdown --always
+          export ARMSDK="$(pwd)/armsdk"
+          haxelib install app.hxml --always
           haxe app.hxml 
